--- a/src/App.global.css
+++ b/src/App.global.css
@@ -2,7 +2,23 @@
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
-body {
+ @import url("./assets/css/photon.css");
+
+ *{
+   padding:0;
+   margin:0;
+ }
+ .RecorderContainer{
+  text-align: center;
+ }
+ .RecorderContainer > a{
+  font-size: 24px;
+ }
+.RecorderContainer button{
+  margin: 10px;
+
+}
+/* body {
   position: relative;
   color: white;
   height: 100vh;
@@ -55,4 +71,4 @@ a:hover {
   justify-content: center;
   align-items: center;
   margin: 20px 0;
-}
+} */
